# ui

./: .gitignore  CLAUDE.md  DESIGN.md  KIWI-UI-ARCHITECTURE.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/kiwi-app/: package.json  vite.config.ts
apps/kiwi-app/src/: app.html
apps/kiwi-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/kiwi-app/src-tauri/capabilities/: default.json
apps/kiwi-app/src-tauri/src/: main.rs
apps/kiwi-app/src-tauri/src/commands/: mail.rs  mod.rs
apps/kiwi-app/src/routes/: +layout.svelte  +page.svelte
apps/kiwi-web/: package.json  vite.config.ts
apps/kiwi-web/src/: app.html
apps/kiwi-web/src/routes/: +layout.svelte
scripts/: deploy-demo.sh
